--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-extensions/password-strength": "^8.1.1",
     "@angular/animations": "~11.0.9",
     "@angular/cdk": "^11.0.4",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
     "@angular/fire": "^6.1.4",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.9",
     "@angular/material": "^11.0.4",
     "@angular/platform-browser": "~11.0.9",
@@ -25,6 +27,7 @@
     "angularfire2": "^5.4.2",
     "firebase": "^8.2.1",
     "lodash": "^4.17.20",
+    "material-design-icons": "^3.0.1",
     "ngx-auth-firebaseui": "^5.0.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
