--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "private": true,
   "dependencies": {
     "@angular-material-extensions/password-strength": "^8.1.1",
-    "@angular/animations": "~11.0.9",
+    "@angular/animations": "~12.1.1",
     "@angular/cdk": "^11.0.4",
-    "@angular/common": "~11.0.9",
-    "@angular/compiler": "~11.0.9",
-    "@angular/core": "~11.0.9",
+    "@angular/common": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "~12.1.1",
     "@angular/fire": "^6.1.4",
     "@angular/flex-layout": "^11.0.0-beta.33",
-    "@angular/forms": "~11.0.9",
+    "@angular/forms": "~12.1.1",
     "@angular/material": "^11.0.4",
-    "@angular/platform-browser": "~11.0.9",
-    "@angular/platform-browser-dynamic": "~11.0.9",
-    "@angular/router": "~11.0.9",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
     "angularfire2": "^5.4.2",
     "firebase": "^8.2.1",
     "lodash": "^4.17.20",
@@ -31,13 +31,13 @@
     "ngx-auth-firebaseui": "^5.0.1",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/architect": ">= 0.900 < 0.1200",
-    "@angular-devkit/build-angular": "~0.1100.7",
-    "@angular/cli": "^11.0.7",
-    "@angular/compiler-cli": "~11.0.9",
+    "@angular-devkit/architect": "0.1201.1",
+    "@angular-devkit/build-angular": "~12.1.1",
+    "@angular/cli": "^12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.162",
@@ -49,7 +49,7 @@
     "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
@@ -58,6 +58,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.2.2"
+    "typescript": "^4.3.5"
   }
 }
